# fastApiProject

./: Dockerfile  README.md  bak.Dockerfile  dependencies.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
internal/: lamb.py  member.py
repository/: crud.py  database.py  models.py  schemas.py
routers/: item.py  user.py
